fix overlaping shadow in dropdown menu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 .test {
     height: 200vh;
     background: url(../assets/img/test.img.png);
+    z-index: 2;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
     display: flex;
     padding:0 20px;
     justify-content: center;
+    z-index: 1;
 }
 .wrapper {
     display: flex;
@@ -79,7 +81,7 @@ body {
 }
 
 .navlink-item_dropdown:hover {
-    background: 0;
+    background: #212121;
     cursor: unset;
 }
 
@@ -97,7 +99,6 @@ body {
     left:0;
     min-width:100%;
     background:rgba(59, 59, 59, 0.37);
-    padding-top: 10px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.53);
     z-index: -1; /* z-index -1 Для отображения тени под header'ом */
 }
@@ -189,7 +190,7 @@ body {
 
     .header .dropdown-menu {
         box-shadow: 0 0 7px rgba(53, 53, 53, 0.87);
-        background: rgba(33, 33, 33, 0.66);
+        background: rgba(33, 33, 33, 0.8);
     }
 
     .dropdown-menu-item:hover {
